2006-06-04  Johan Dahlin  <johan@gnome.org>

	* gobject/gobjectmodule.c (pyg_spawn_async)
	(pyg_signal_new): Fix two leaks in error cases, found by
	Coverity.

2006-05-28  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_subtype.py: Uncomment Johan's "subsubtype" test case.

	* gobject/gobjectmodule.c (pygobject__g_instance_init): Pass the
	g_class to pygobject_new_full, because during the instance init
	function instances are temporarily assigned the parent's GType.

	* gobject/pygobject-private.h,
	* gobject/pygobject.c (pygobject_new_full): Make
	pygobject_new_full accept an optional g_class parameter; If
	present, the GType is extracted from the class instead of from the
	instance.

2006-05-20  Yevgen Muntyan  <muntyan@tamu.edu>

	reviewed by: Gustavo Carneiro

	* gobject/pygobject.c (pygobject_init, pygobject_get_property),
	(pygobject_set_property): Bug 341174: Be more specific in
	set/get_property error messages.

2006-05-07  Yevgen Muntyan  <muntyan@tamu.edu>

	reviewed by: Gustavo Carneiro

	* gobject/gobjectmodule.c (_log_func, add_warning_redirection),
	(remove_handler, disable_warning_redirections, init_gobject):
	* gobject/pygobject.h:  Add new pyg_add_warning_redirection and
	pyg_disable_warning_redirections APIs (bug #323786 again).

2006-05-07  Johan Dahlin  <johan@gnome.org>

	* Makefile.am (CLEANFILES): Remove pygtk.py, it's not
	auto-generated any longer. Thanks to Kjartan for noticing.

2006-05-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygoptioncontext.c:
	s/sizeof(PyGMainContext)/sizeof(PyGOptionContext)/ (copy-paste error).

2006-05-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_pid_close): Add a close() method
	to the GPid wrapper.
	
	* gobject/gobjectmodule.c (pyg_pid_free, pyg_pid_new),
	(pyg_spawn_async, init_gobject): Wrap GPid in an object whose
	destructor calls g_spawn_close_pid.  Fixes #340160.

2006-04-29  Johannes Hölzl <johannes.hoelzl@gmx.de>
